# slimecraft

./: .gitignore  CMakeLists.txt  botplayer.c  botplayer.h  cmdlist.c  cmdlist.h  common.c  common.h  conanfile.txt  demo.c  gamestate.c  gamestate.h  network.c  network.h  slimeclient.c  slimeclient.h  slimeserv_cmdline.c  slimeserv_gui.c  slimeserver.c  slimeserver.h  slimetestclient.c
enet/: CMakeLists.txt
sokol/: sokol.c  sokol_gp.h
sokol_gp/samples/: sample-bench.c  sample-blend.c  sample-effect.c  sample-framebuffer.c  sample-primitives.c  sample-rectangle.c  sample-sdf.c
